--- a/.gitignore
+++ b/.gitignore
@@ -75,4 +75,5 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+node_modules
 # End of https://www.toptal.com/developers/gitignore/api/windows,linux,macos
